--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                 </div>
                 <div class="col-lg-4">
                     <p>
-		ch Oil soon outgrew it’s location and acquired it’s new headquarters east of Weatherford. The location on  Route 66 seemed to be fitting for this pioneer company with bright visions of the future and a tenacious attitude of service. As business expanded, so has the property on Route 66. The headquarters are located at 1501 N Airport Road in Weatherford, acquired in 1997. Rick Koch Oil Company acquired ASAP fuels in 2010. In 2012, RKO ASAP changed it’s name to ASAP Energy Inc.
+		Koch Oil soon outgrew it’s location and acquired it’s new headquarters east of Weatherford. The location on  Route 66 seemed to be fitting for this pioneer company with bright visions of the future and a tenacious attitude of service. As business expanded, so has the property on Route 66. The headquarters are located at 1501 N Airport Road in Weatherford, acquired in 1997. Rick Koch Oil Company acquired ASAP fuels in 2010. In 2012, RKO ASAP changed it’s name to ASAP Energy Inc.
 		    </p>
                 </div>
                 <!--<div class="col-lg-8 col-lg-offset-2 text-center">
